--- a/public/style.css
+++ b/public/style.css
@@ -1,35 +1,15 @@
-* {
-	box-sizing: border-box;
-}
 :root {
 	--theme-rhythm: 4em;
+	--demo-secondary-minor: #fff;
 }
-html {
-	font-family: system-ui, sans-serif;
+
+/* Overrides */
+.demo-main {
+	border-color: transparent;
+	padding: 0;
 }
-html, body {
-	min-height: 100vh;
-	margin: 0;
-}
-body {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-header,
-main {
-	max-width: 50em;
-	margin: 0 auto;
-	padding: 0 1em;
-}
-h1 {
-	margin: .5em 0;
-}
+
 img {
-	display: block;
-	max-width: 100%;
-	height: auto;
 	background-image: url(/demo-checkerboard.svg);
 	background-repeat: repeat;
 }
@@ -39,22 +19,20 @@ figure {
 figcaption {
 	padding: .5em 1em .75em;
 }
-table {
-	margin: 2em 0 0;
-}
-table :is(td,th) {
-	padding: .25em .5em;
-}
 section {
 	padding-bottom: var(--theme-rhythm);
-	margin: var(--theme-rhythm) 0;
+	margin: var(--theme-rhythm) auto;
 	border-bottom: 1px solid #c2c2c2;
+	max-width: 50em;
 }
 section:first-of-type {
 	margin-top: 0;
 }
 section:last-of-type {
 	border-bottom: none;
+}
+table {
+	margin-top: 2em;
 }
 
 /* Demo styles */
